--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,11 +1,14 @@
 :root {
-  --color1: #1b1b1b;
-  --color2: #8e99ab;
-  --color3: #ffffff;
-  --color4: #1fc0ae;
-  --color5: #009fe3;
-  --color6: #eaecf0;
-  --color7: #f6f7fa;
-  --color8: #f9fafb;
-  --color9: #667085;
+  --color1: #231D4F;
+  --color2: #BB6BD9;
+  --color3: #F5F5FA;
+  --color4: #F2DAD5;
+  --color5: #848199;
+  --color6: #FFFFFF;
+  --color7: #A847CC;
+  --bg: linear-gradient(180deg, #F5F5FA 0%, #F2DAD5 44.15%, #A1ABD6 100%);
+  --color8: rgba(251, 251, 251, 65%);
+  --color9: #7B72C1;
+  --color10: #403879;
+  --color11: #3B3472;
 }
