--- a/src/style.scss
+++ b/src/style.scss
@@ -3,4 +3,21 @@
 @import "./styles/colors";
 @import "./styles/typography";
 @import "./styles/layout";
+@import "./styles/button";
+@import "./styles/header";
+@import "./styles/section";
+@import "./styles/card";
+
+h1 {
+  font: var(--heading-large-font);
+}
+
+.page__wrap {
+  box-shadow: 0px 12px 40px 0px #00000014;
+  background: var(--bg);
+  padding-top: 41px;
+  padding-bottom: 64px;
+}
+
+/* Rectangle */
 
